bridge: fix list style on mobile
The MinervaNeue skin includes a reset.css, which it then partially
undoes (e. g. <i> and <strong> still look as they’re supposed to), but
not completely – in particular, our lists didn’t have bullets. Fix this.
(The use of list-style-type: disc instead of list-style: disc outside is
to avoid overriding Vector’s list-style-image.)

Bug: T239421

--- a/client/data-bridge/src/presentation/styles/_normalize.scss
+++ b/client/data-bridge/src/presentation/styles/_normalize.scss
@@ -29,6 +29,9 @@ h6 {
 
 ul {
 	padding-left: 1.5em;
+
+	// undo MinervaNeue’s reset.css setting list-style: none
+	list-style-type: disc;
 }
 
 strong,
